--- a/package.json
+++ b/package.json
@@ -7,23 +7,24 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "piral-tryout": "1.1.3",
+    "@dbeining/react-atom": "4.1.13",
+    "@libre/atom": "1.3.3",
+    "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/react-router": "latest",
     "@types/react-router-dom": "latest",
-    "@types/node": "latest",
-    "typescript": "latest",
-    "@dbeining/react-atom": "4.1.13",
-    "@libre/atom": "1.3.3",
     "history": "4.10.1",
+    "path-to-regexp": "1.8.0",
+    "piral-cli": "next",
+    "piral-cli-webpack": "^0.12.4",
+    "piral-tryout": "1.1.3",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "tslib": "1.14.1",
-    "path-to-regexp": "1.8.0",
-    "piral-cli": "^0.12.4"
+    "typescript": "latest"
   },
   "peerDependencies": {
     "@dbeining/react-atom": "*",
