--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "path-to-regexp": "1.8.0",
     "piral-cli": "next",
     "piral-cli-webpack": "^0.12.4",
-    "piral-tryout": "1.1.3",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "piral-tryout": "1.1.4",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "tslib": "1.14.1",
@@ -50,5 +50,6 @@
   "piral": {
     "comment": "Keep this section to use the Piral CLI.",
     "name": "piral-tryout"
-  }
+  },
+  "peerModules": []
 }
