--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "path-to-regexp": "1.8.0",
     "piral-cli": "next",
     "piral-cli-webpack": "^0.12.4",
-    "piral-tryout": "1.2.3",
+    "netflix-piral": "1.2.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router": "5.2.0",
@@ -36,7 +36,7 @@
     "react-router-dom": "*",
     "tslib": "*",
     "path-to-regexp": "*",
-    "piral-tryout": "*"
+    "netflix-piral": "*"
   },
   "scripts": {
     "start": "pilet debug",
@@ -50,7 +50,7 @@
   ],
   "piral": {
     "comment": "Keep this section to use the Piral CLI.",
-    "name": "piral-tryout"
+    "name": "netflix-piral"
   },
   "peerModules": []
 }
